# pysjtu

./: .deepsource.toml  .gitignore  .readthedocs.yml  README.md  ckpt.pth  demo.py  elect.py  export.py  model.pickle  pyproject.toml  requirements.txt  setup.py
.circleci/: config.yml
.github/workflows/: build_n_publish.yml  pysjtu.yml
docs/: advanced.rst  api.rst  conf.py  index.rst  isjtu_api.rst  migration.rst  models.rst  quickstart.rst
docs/_static/: custom.css
pysjtu/: __init__.py  api.py  api.pyi  const.py  consts.py  exceptions.py  fields.py  model.py  model.pyi  nn_models.py  ocr.py  schema.py  session.py  util.py  utils.py
pysjtu/client/: __init__.py  base.py
pysjtu/client/api/: __init__.py  course.py  exam.py  gpa.py  profile.py  schedule.py  score.py  selection.py
pysjtu/model/: __init__.py  base.py  course.py  exam.py  gpa.py  schedule.py  score.py
pysjtu/models/: __init__.py  base.py  common.py  course.py  exam.py  gpa.py  profile.py  schedule.py  score.py  selection.py
pysjtu/ocr/: __init__.py  nn_model.onnx
pysjtu/ocr_models/: nn_model.onnx  svm_model.onnx
pysjtu/parser/: profile.py  selection.py
pysjtu/schema/: __init__.py  base.py  course.py  exam.py  gpa.py  schedule.py  score.py
pysjtu/schemas/: __init__.py  base.py  course.py  exam.py  gpa.py  profile.py  schedule.py  score.py  selection.py
tests/: conftest.py  mock_server.py  test_api.py  test_model.py  test_ocr.py  test_parser.py  test_schema.py  test_utils.py
tests/resources/resp/: exam.json  gpa.json  gpa_query_params.json  lib_course_1.json  lib_course_2.json  schedule_course.json  schedule_course_2.json  score.json  score_factor.json  selection_class.json  selection_course.json  selection_sector.json  selection_shared_info.json
tests/resources/website/: cjcx_cxDgXscj.html  cjcx_cxXsXmcjList.html  common_cxGnzdxxList.html  funcData_cxFuncDataList_1.html  funcData_cxFuncDataList_2.html  funcData_cxFuncDataList_3.html  funcData_cxFuncDataList_initial.html  gpapmtj_cxGpaxjfcxIndex.html  gpapmtj_tjGpapmtj.html  gpapmtj_tjGpapmtj_failure.html  index_cxshjdAreaFive.html  index_initMenu.html  jalogin  kscx_cxXsksxxIndex.html  login_slogin.html  xsgrxxwh_cxXsgrxx.html  xskbcx_cxXsKb.html  zzxkyzb_cxJxbWithKchZzxkYzb.html  zzxkyzb_cxZzxkYzbDisplay.html  zzxkyzb_cxZzxkYzbIndex.html  zzxkyzb_cxZzxkYzbIndex_not_selecting.html  zzxkyzb_cxZzxkYzbPartDisplay.html
