[project]
name = "pysjtu"
dynamic = ["version"]
description = "The Python iSJTU client for Humans."
authors = [
    { name = "LightQuantum", email = "self@lightquantum.me" },
]
dependencies = [
    "httpx==0.11.1",
    "marshmallow>=3.19.0",
    "lxml>=4.9.2",
]
requires-python = ">=3.8"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
classifiers = [
    "Operating System :: OS Independent",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.urls]
homepage = "https://github.com/PhotonQuantum/pysjtu"
repository = "https://github.com/PhotonQuantum/pysjtu"
documentation = "https://pysjtu.readthedocs.io/en/latest"

[project.optional-dependencies]
docs = [
    "Sphinx>=6.1.3",
    "sphinx-rtd-theme>=0.5.1",
    "sphinx-autodoc-typehints>=1.20.2",
]
tests = [
    "pytest>=7.2.1",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "Flask>=2.2.2",
    "flake8>=5.0.4",
    "respx==0.9.0",
]
ocr = [
    "onnxruntime>=1.13.1",
    "numpy>=1.24.1",
    "Pillow>=9.4.0",
]

[tool.pdm]
version = { source = "file", path = "pysjtu/__init__.py" }

[tool.pdm.dev-dependencies]
dev = [
    "loguru>=0.6.0",
    "setuptools>=65.7.0",
]

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
