[project]
name = "pysjtu"
dynamic = ["version"]
description = "The Python iSJTU client for Humans."
authors = [
    { name = "LightQuantum", email = "self@lightquantum.me" },
]
dependencies = [
    "marshmallow>=3.21.2",
    "lxml>=4.9.2",
    "httpx>=0.27.0",
    "marshmallow-dataclass>=8.6.1",
    "typing-extensions>=4.6.0"
]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
classifiers = [
    "Operating System :: OS Independent",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.urls]
homepage = "https://github.com/PhotonQuantum/pysjtu"
repository = "https://github.com/PhotonQuantum/pysjtu"
documentation = "https://pysjtu.readthedocs.io/en/latest"

[project.optional-dependencies]
docs = [
    "Sphinx>=4.5.0",
    "sphinx-book-theme>=0.4.0-rc1",
]
tests = [
    "pytest>=7.2.1",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "Flask>=2.2.2",
    "flake8>=5.0.4",
    "respx>=0.20.1",
]
ocr = [
    "onnxruntime>=1.18.0",
    "numpy>=1.26.4",
    "Pillow>=10.3.0",
]

[tool.pdm]
version = { source = "file", path = "pysjtu/__init__.py" }

[tool.pdm.dev-dependencies]
dev = [
    "loguru>=0.6.0",
    "setuptools>=65.7.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
